# substrings

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  substrings.sln
CMake/: DefaultFortran.cmake
POC/: substrings.py
substrings/: CMakeLists.txt  Directory.build.props  EntropyCache.cpp  EntropyCache.hpp  FastLog2.hpp  Matcher.cpp  Matcher.hpp  Substrings.cpp  Substrings.hpp  cli.cpp  cli.hpp  main.cpp  process_body_ep.cpp  process_body_thirdp.cpp  process_c_ep.cpp  process_c_thirdp.cpp  substrings.vcxproj  substrings.vcxproj.filters  system.cpp  system.hpp  timeit.hpp
substrings/thirdpts/: difflib.h
